--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prime Bus</title>
-    <meta name="description" content="Prime bus AE" />
+    <title>Prime Bus UK</title>
+    <meta name="description" content="Prime bus UK" />
     <!-- favicons Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
